[tool.poetry]
name = "no-spoilers"
version = "0.1.0"
description = ""
authors = ["telugu-boy <h0l33fuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.18.4"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.0"
pymongo = "^4.5.0"
bcrypt = "^4.0.1"
quart-cors = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "api:run"
